[project]
name = "llmchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.78",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.9",
    "prompt-toolkit>=3.0.52",
    "rich>=14.1.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llmchat*",]
